crates/swc_css_parser/tests/errors/comments/bad-comment-2/output.stderr
error: Unterminated block comment
 --> $DIR/tests/errors/comments/bad-comment-2/input.css:1:1
  |
1 | /*! bad comment *
  | ^^^^^^^^^^^^^^^^^

